.[2.0.0] - unreleased
[%collapsible]
====
[discrete]
=== Breaking Change

* https://github.com/serpro69/kotlin-faker/pull/246[#246] (:extension) Remove KSP from kotest-property extension
* https://github.com/serpro69/kotlin-faker/pull/219[#219] (:core) Extract faker's providers into several submodules of their own

[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/254[#254] (:faker) Add Pictures faker
* https://github.com/serpro69/kotlin-faker/pull/245[#245] (:extension) Add extension for testing with BLNS
* https://github.com/serpro69/kotlin-faker/pull/243[#243] (:core) Add collection element and map k/v type gen for random class instance
* https://github.com/serpro69/kotlin-faker/pull/234[#234] (:extension) Add extension module for kotest property testing
* https://github.com/serpro69/kotlin-faker/pull/232[#232] (:core) Add support for alternative primary key when resolving values
* https://github.com/serpro69/kotlin-faker/pull/227[#227] Add BOM to manage faker versions
* https://github.com/serpro69/kotlin-faker/issues/222[#222] (:faker:databases) Create new Databases faker module
* https://github.com/serpro69/kotlin-faker/issues/218[#218] (:core) Allow creating custom fakers / generators

[discrete]
=== Changed

* https://github.com/serpro69/kotlin-faker/issues/249[#249] Publish all artifacts with the same version

++++
<details><summary><b>Cleaned-up tags:</b></summary>
<p>
++++
```bash
➜ git tag --list | grep -e 'faker-.*v2.0.0-rc.*' | xargs -I{} git tag --delete {}
Deleted tag 'faker-books-v2.0.0-rc.1' (was d7d01006)
Deleted tag 'faker-books-v2.0.0-rc.2' (was 5a1b993d)
Deleted tag 'faker-books-v2.0.0-rc.3' (was 306caa24)
Deleted tag 'faker-books-v2.0.0-rc.4' (was 2783626a)
Deleted tag 'faker-commerce-v2.0.0-rc.1' (was d7d01006)
Deleted tag 'faker-commerce-v2.0.0-rc.2' (was c29b243c)
Deleted tag 'faker-commerce-v2.0.0-rc.3' (was 036c2ccf)
Deleted tag 'faker-commerce-v2.0.0-rc.4' (was e0764054)