@@ -2,7 +2,7 @@ package io.github.serpro69.kfaker;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Random;
+import kotlin.random.Random;
 
 import static io.github.serpro69.kfaker.FunctionalUtil.fromConsumer;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
@@ -13,7 +13,7 @@ class FakerConfigTestJava {
     void testConfiguringFakerInJava() {
         FakerConfig fakerConfig = FakerConfigBuilder.fakerConfig(fromConsumer(builder -> {
             builder.setLocale("en-AU");
-            builder.setRandom(new Random(42));
+            builder.setRandom(Random.Default);
         }));
 
         String name = new Faker(fakerConfig).getName().name();
